# Rust_Arbitrage-Detector

./: .env  .env.example  Cargo.toml  README.md
examples/: binance_websocket.rs
src/: error.rs  lib.rs  logger.rs  main.rs
src/config/: mod.rs
src/handlers/: mod.rs
src/models/: mod.rs
src/models/socket_container/: binance_container.rs  mod.rs  socket_container.rs
src/routes/: mod.rs
src/socket/: mod.rs  socket_consumer.rs
src/socket/socket_container/: binance_container.rs  coinbase_container.rs  mod.rs  socket_container.rs
