[package]
name = "arbitrage_detector"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
tungstenite = "0.21"
futures = "0.3"
axum = "0.8.6"
dotenvy = "0.15.7"
serde = "1.0.228"
envy = "0.4.2"
chrono = { version = "0.4.42", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
serde_json = "1.0.145"
